syntax = "proto3";

package NetworkMessageProto;

message GenericMessage
{
    uint32 Type = 1;
    InputMessage InputMsg = 2;
    StateUpdateMessage StateMsg = 3;
    PlayersUpdateMessage PlayersMsg = 4;
}

message Vec2
{
    float X = 1;
    float Y = 2;
}

message InputMessage
{
    string PlayerId = 1;
    uint32 Tick = 2;
    uint32 Type = 3;
    Vec2 MoveInput = 4;
    Vec2 LookInput = 5;
}

message PlayerState
{
    string PlayerId = 1;
    string PlayerName = 2;
    uint32 MaxHp = 3;
    uint32 CurrentHp = 4;
    float MoveSpeed = 5; // 人物移动速度
    float BulletSpeed = 6; // 子弹飞行速度
    uint32 Damage = 7; //  伤害
    uint32 ShootFrequency = 8; // 每秒发射子弹数
    uint32 ShootRange = 9; // 子弹最大射程
    uint32 CriticalRate = 10; // 暴击率
    Vec2 Position = 11;
}

message StateUpdateMessage
{
    repeated PlayerState Players = 1;
    uint32 Tick = 2;
}

message PlayersUpdateMessage
{
    repeated PlayerInfo Players = 1;
}

message PlayerInfo
{
    string Id = 1; // CSteamID or a string for local players
    string Name = 2;
}
